--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
 <body> git 
     <p>Git</p>
     <h1>welcome here</h1>
     <h3>title</h3>
-<<<<<<< HEAD
-    <p>123</p>
-    <div>developer</div>
-=======
     <p>dev1</p>
     <span>dev</span>
->>>>>>> dev1
 </body>
 </html>
